--- a/public/assets/scss/pages/_blog-list.scss
+++ b/public/assets/scss/pages/_blog-list.scss
@@ -333,7 +333,7 @@ textarea.form-control {
   margin-bottom: 30px;
   label {
     position: absolute;
-    top: 15px;
+    // top: 15px;
     left: 10px;
     font-size: 14px;
     line-height: 24px;
