--- a/public/assets/scss/pages/_homepage1.scss
+++ b/public/assets/scss/pages/_homepage1.scss
@@ -154,6 +154,9 @@
         &.icon-to {
           background-image: url(/assets/imgs/template/icons/to.svg);
         }
+        &.icon-hour {
+          background-image: url(/assets/imgs/template/icons/time.svg);
+        }
       }
     }
     .search-inputs {
